test-cases/final-dump/resource_error2.exp
Error detected during type checking of module(s) resource_error2
[91mfinal-dump/resource_error2.wybe:1:24: Input resource io not available at call to proc resource_error
[0m
