test-cases/final-dump/resource_error2.wybe
pub def resource_error {
    ! println("shouldn't work: no use !io")
}

# We don't have a way to make this illegal yet.
# pub def resource_error2 use io {
#     ! println("shouldn't work: only uses io read-only")
# }

pub def should_be_ok use !io {
    ! should_be_ok2
}

pub def should_be_ok2 use !io {
    ! println("should work")
}


use res_decl

pub def missing_resource {
    ! use_resource
}

pub def use_resource use !count {
    incr(!count)
}

pub def bad_special_use use !io {
    !println(call_source_file_name)
}
